results/SVCOMP/0-shot/log-assert2-2024_03_18_23_10_56.txt
import java.util.Random;

class assert2 {
  //@ requires true;
  //@ ensures true;
  public static void main() {
    int i = new Random().nextInt();

    //@ assert i >= 0;
    if (i >= 1000) 
      //@ assert i > 1000 : "i is greater 1000";
  }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:12: error: illegal start of statement
  }
  ^
1 error

